# symbolize

./: .gitattributes  .gitignore  .pylintrc  MANIFEST.in  README.md  circle.yml  header.txt  pyproject.toml  setup.cfg  setup.py  typetheory.pyproj
.circleci/: config.yml
examples/notebooks/: README - example.ipynb  Syntax - Graphs.ipynb  Type Theory - Groups - Scratch.ipynb  Type Theory - Logic - Scratch.ipynb  Type Theory - Logic V2 - Scratch.ipynb  Type Theory - Logic V2.ipynb  Type Theory - Logic.ipynb  Type Theory Syntax - Graphs.ipynb  Type Theory Syntax.ipynb
symbolize/: __init__.py  _version.py  groups.py  natural.py  utility.py
symbolize/definitions/: __init__.py  functions.py  integrals.py  logic.py  misc.py  operators.py  sets.py  variables.py
symbolize/expressions/: __init__.py  arity.py  expression.py  extensions.py
symbolize/logic/: argument.py
tests/: __init__.py  test_groups.py
tests/definitions/: test_definitions.py
tests/expressions/: test_arity.py  test_expression.py  test_render_graphtool.py  test_renderer.py
tests/logic/: test_deduction_rules.py  test_proposition.py
typetheory/: .project  .pydevproject  groups.py  natural.py
typetheory/definitions/: functions.py  integrals.py  logic.py  misc.py  operators.py  sets.py  variables.py
typetheory/expressions/: arity.py  expression.py  extensions.py
typetheory/logic/: deduction_rules.py  proposition.py  proposition2.py  variables.py
typetheory/tests/: __init__.py  test_arity.py  test_definitions.py  test_expression.py  test_renderer.py
typetheory/typetheory/: __init__.py  (+7 more)
(+49 files in other folders)
