[tool.poetry]
name = "symbolize"
version = "0.1.0"
description = "Mathematical Symbol Engine"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
repository = "https://github.com/bsdz/symbolize"
homepage = "https://github.com/bsdz/symbolize"

include = ["LICENSE.txt", "README.md"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
ipykernel = "^5.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
