[tool.poetry]

include = ["LICENSE.txt", "README.md"]

[project.optional-dependencies]
dev = [
    "black[jupyter]>=25.1.0,<26.0.0",
    "mypy>=1.15.0,<2.0.0",
    "isort>=6.0.1,<7.0.0",
    "docformatter>=1.7.0,<2.0.0",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[project]
name = "symbolize"
description = "Mathematical Symbol Engine"
license = "GPL-3.0-only"
version = "0.1.0"
readme = "README.md"
authors = [{name = "Blair Azzopardi", email = "blairuk@gmail.com"}]
requires-python = '>=3.7,<4.0'
dependencies = []

[project.urls]
homepage = "https://github.com/bsdz/symbolize"
repository = "https://github.com/bsdz/symbolize"
